--- a/css/styles.css
+++ b/css/styles.css
@@ -136,8 +136,9 @@ nav h1 a {
   list-style: outside none none;
   margin: 0;
   padding: 30px 15px 60px;
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   text-align: center;
 }
 #restaurants-list li {
@@ -149,7 +150,7 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   max-width: 470px;
-  width: 80%;
+  width: 25%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -209,7 +210,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -243,11 +244,11 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 30px 2% 80px 2%;
   width: 50%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+ /* padding: 30px 5px 80px 5px;*/
 }
 #reviews-container h2 {
   color: #f58500;
@@ -259,6 +260,7 @@ nav h1 a {
 #reviews-list {
   margin: 0;
   padding: 0;
+  width: 95%;
 }
 #reviews-list li {
   background-color: #fff;
