feat: css review list correction
alignment fixing

--- a/css/mobileCss.css
+++ b/css/mobileCss.css
@@ -34,6 +34,11 @@ body {
 #reviews-container {
     padding: 30px 10px 80px;
 }
+#reviews-list li {
+   
+    position: initial;
+    width: 85%;
+}
 .leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
     border: 2px solid rgba(0,0,0,0.2);
     background-clip: padding-box;
