--- a/css/mobileCss.css
+++ b/css/mobileCss.css
@@ -1,7 +1,7 @@
-
 body {
      display: grid;
     grid-template-columns: 1fr;
+
 }
 
 .inside #map-container {
@@ -26,39 +26,36 @@ body {
     align-items: center;
     text-align: center;
 }
-#reviews-list li {
-  
-  position: initial;
-  width: 85%;
-}
-#restaurant-container, #reviews-container {
-    
-    padding: 340px 30px 40px 30px;
-    width: 100%;
-}
 
-#reviews-container {
-    padding: 30px 10px 80px;
-}
 #reviews-list li {
-   
-    position: initial;
+     position: initial; 
     width: 85%;
 }
-.leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
-    border: 2px solid rgba(0,0,0,0.2);
-    background-clip: padding-box;
-    margin-top: 90px;
-}
-#restaurant-name {
-    
+
+#restaurant-container {
+     margin-top: 10px;
+    padding: 310px 0 40px 0;
+        width: 100%;
     text-align: center;
 }
+#reviews-container {
+	width: 100%;
+    padding: 10px 10px 80px;
+    text-align: center;
+
+}
+
+#restaurant-name {
+    font-size: 18px;
+    text-align: center;
+    font-weight: 150px;
+    margin: 15px 0 0 30px;
+}
 #maincontent {
-    
+
     min-height: 80%;
     margin-bottom: -100px;
-    /* height: 20%; */
+    
 }
 #footer {
    
@@ -70,7 +67,21 @@ body {
     width: 100%;
    
 }
-#restaurant-img {
-    width: 100%;
+#breadcrumb {
+       width: 100%;
+       text-align: center;
 }
+#restaurant-img {
+    width: 90%;
+    margin-left: 10px;
+}
+#restaurant-cuisine {
+        width: 100%;
+}
+nav h1 a {
+        letter-spacing: 2px;
+    }
+   nav {
+        height: 40px;
+   } 
 
