--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 nav {
   width: 100%;
   height: 45px;
-  background-color: #252831;
+  background-color: #6d0542;
   text-align:center;
 }
 nav h1 {
